# stoa

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  PRODUCT.md  README.md  ROADMAP-POST-MVP.md  ROADMAP.md  SECURITY.md  clippy.toml  deny.toml  mkdocs.yml  release-plz.toml  rust-toolchain.toml  rustfmt.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: bench.yml  codeql.yml  python.yml  release-plz.yml  release.yml  rust.yml
benchmarks/: README.md  spike-m0.md
benchmarks/agent-leak/: README.md
benchmarks/agent-leak/fixtures/: smoke.json
benchmarks/ama-bench/: README.md
benchmarks/beam/: README.md
benchmarks/beam/fixtures/: smoke.json
benchmarks/corpus/: README.md  agent-leak.sh  beam.sh  longmemeval.sh  memory-agent-bench.sh  memtrack.sh  mteb-retrieval.sh
benchmarks/fama/: README.md
benchmarks/longmemeval/: README.md
benchmarks/longmemeval/fixtures/: smoke.json
benchmarks/memory-agent-bench/: README.md
benchmarks/memory-agent-bench/fixtures/: smoke.json
benchmarks/memory-arena/: README.md
benchmarks/memtrack/: README.md
benchmarks/memtrack/fixtures/: smoke.json
benchmarks/mteb-retrieval/: README.md
benchmarks/mteb-retrieval/fixtures/: smoke.json
benchmarks/results/: README.md  v0.1-local-chroma-sqlite-agent-leak.json  v0.1-local-chroma-sqlite-agent-leak.md  v0.1-local-chroma-sqlite-longmemeval.md  v0.1-local-chroma-sqlite-mteb-retrieval.json  v0.1-local-chroma-sqlite-mteb-retrieval.md
benchmarks/spike-m0/cross-compile/: Cargo.toml  Cross.toml  build-all.sh  build-report.tsv
benchmarks/spike-m0/fastembed-parity/: Cargo.toml  compare.py  embed_python.py  parity-report.txt  pyproject.toml  python.stats.txt  rust.stats.txt
benchmarks/spike-m0/hook-latency/: bench-cold-results.txt  bench-cold.sh  bench-results.txt  bench.sh
benchmarks/stark/: README.md
benchmarks/swe-bench-cl/: README.md
crates/stoa-bench/: CHANGELOG.md  Cargo.toml
crates/stoa-bench/src/: adapter.rs  cli.rs  error.rs  longmemeval.rs  main.rs  report.rs  result.rs  run.rs
crates/stoa-bench/src/adapters/: agent_leak.rs  beam.rs  longmemeval.rs  memory_agent_bench.rs  memtrack.rs  mod.rs  mteb.rs
crates/stoa-bench/src/adapters/agent_leak/: loader.rs  mod.rs  scoring.rs
crates/stoa-bench/src/adapters/mteb/: beir.rs  corpus.rs  mod.rs  scoring.rs  smoke.rs
crates/stoa-bench/src/backends/: mod.rs  noop.rs
crates/stoa-bench/tests/: agent_leak_runner.rs  longmemeval_runner.rs  mteb_smoke_runner.rs
crates/stoa-capture/: CHANGELOG.md  Cargo.toml
crates/stoa-capture/src/: audit.rs  error.rs  lib.rs  patterns.rs  redactor.rs  worker.rs
crates/stoa-capture/tests/: redaction.rs  worker.rs
crates/stoa-capture/tests/common/: mod.rs
crates/stoa-cli/: CHANGELOG.md  Cargo.toml
crates/stoa-cli/src/: catalog.rs  cli.rs  hook.rs  index.rs  init.rs  inject.rs  main.rs  page.rs  query.rs  read.rs  schema.rs  stoa_md.rs  workspace.rs  write.rs
crates/stoa-cli/src/commands/: daemon.rs  hook.rs  init.rs  inject.rs  mod.rs  query.rs  read.rs  runtime.rs  schema.rs  write.rs
crates/stoa-cli/src/daemon/: loop_runner.rs  mod.rs  recall_drain.rs  watch.rs
crates/stoa-cli/src/templates/: STOA.default.md
crates/stoa-cli/tests/: cli_cmd.rs  cli_daemon.rs  cli_daemon_watch.rs  cli_demo.rs  cli_hook_install.rs  cli_hook_install_inject.rs  cli_index.rs  cli_init.rs  cli_init_no_embeddings.rs  cli_inject_log.rs  cli_query.rs  cli_read_write.rs  cli_schema.rs
crates/stoa-cli/tests/cmd/: help.trycmd  unknown_subcommand.trycmd  version.trycmd
crates/stoa-cli/tests/common/: mod.rs
crates/stoa-core/: CHANGELOG.md  Cargo.toml
crates/stoa-core/src/: error.rs  frontmatter.rs  id.rs  kind.rs  lib.rs  relationship.rs  schema.rs  validate.rs
crates/stoa-core/tests/: frontmatter_roundtrip.rs
crates/stoa-doclint/: CHANGELOG.md  Cargo.toml
crates/stoa-doclint/src/: main.rs
crates/stoa-doclint/src/lint/: comments.rs  mod.rs  tests.rs  tokens.rs  visitor.rs
crates/stoa-doclint/tests/: cli.rs
crates/stoa-doclint/tests/fixtures/: forbidden_block.rs  forbidden_line.rs  forbidden_todo.rs  ok_doc.rs  ok_genuine.rs  ok_prefix.rs  trivial_const_env.rs  trivial_struct.rs
crates/stoa-hooks/: CHANGELOG.md  Cargo.toml
crates/stoa-hooks/src/: main.rs
crates/stoa-hooks/tests/: hook.rs  latency.rs
crates/stoa-hooks/tests/common/: mod.rs
crates/stoa-inject-hooks/: CHANGELOG.md  Cargo.toml
crates/stoa-inject-hooks/src/: audit.rs  lib.rs  main.rs  payload.rs  query.rs  recall.rs  workspace.rs  wrap.rs
crates/stoa-inject-hooks/tests/: audit.rs  budget_and_gate.rs  cli_session_start.rs  common.rs
crates/stoa-queue/: CHANGELOG.md  Cargo.toml
crates/stoa-queue/src/: claim.rs  error.rs  lib.rs  pragma.rs  queue.rs  schema.rs
crates/stoa-queue/tests/: claim.rs  insert.rs  symlink.rs  take_response.rs  wal.rs
crates/stoa-queue/tests/common/: mod.rs
crates/stoa-recall/: CHANGELOG.md  Cargo.toml
crates/stoa-recall/backends/local-chroma-sqlite/: CHANGELOG.md  Cargo.toml
crates/stoa-recall/backends/local-chroma-sqlite/src/: bm25.rs  ipc.rs  lib.rs  sanitize.rs  schema.rs
crates/stoa-recall/src/: backend.rs  error.rs  fusion.rs  hit.rs  lib.rs  mempalace.rs  stream.rs  traits.rs  types.rs  wire.rs
crates/stoa-render-mermaid/: CHANGELOG.md  Cargo.toml
crates/stoa-render-mermaid/src/: lib.rs
crates/stoa-render-svg/: CHANGELOG.md  Cargo.toml
crates/stoa-render-svg/src/: lib.rs
crates/stoa-render-tui/: CHANGELOG.md  Cargo.toml
crates/stoa-render-tui/src/: lib.rs
crates/stoa-viz/: CHANGELOG.md  Cargo.toml
crates/stoa-viz/src/: lib.rs
docs/: README.md  capture.md  index.md  injection.md  install.md  quickstart.md  recall.md  schema.md  troubleshooting.md
docs/adr/: 0001-mempalace-pivot.md
examples/minimal/: README.md
python/: README.md  pyproject.toml
scripts/: bootstrap.sh  check-changelog.sh  check-file-length.sh  check_lengths.py
web/: README.md
(+2 files in other folders)
