[package]
name = "stoa-bench"
description = "Stoa memory + recall benchmark runners (LongMemEval, MemoryAgentBench, MEMTRACK, BEAM, AgentLeak, MTEB-subset). See benchmarks/README.md."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "stoa-bench"
path = "src/main.rs"

[dependencies]
stoa-recall = { path = "../stoa-recall", version = "0.1.0" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
