[package]
name = "stoa-capture"
description = "Stoa capture worker (transcript drain + PII redaction)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
stoa-queue = { path = "../stoa-queue", version = "0.1.0" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }

[lints]
workspace = true
