[package]
name = "stoa-cli"
description = "Stoa command-line interface — orchestrator over the stoa-recalld daemon."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "stoa"
path = "src/main.rs"

[dependencies]
stoa-core = { path = "../stoa-core", version = "0.1.0" }
stoa-recall = { path = "../stoa-recall", version = "0.1.0" }
clap = { workspace = true }
anyhow = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
