[package]
name = "stoa-doclint"
description = "Flags doc comments that add no information beyond the identifier."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "stoa-doclint"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
proc-macro2 = { version = "1", features = ["span-locations"] }
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"

# proc-macro2 is depended on only to enable the `span-locations` feature so
# that `syn` returns real line/column info on stable rustc. We never `use` it
# directly, which fools cargo-machete — keep this override.
[package.metadata.cargo-machete]
ignored = ["proc-macro2"]

[lints]
workspace = true
