[package]
name = "stoa-doclint"
description = "Forbid non-doc comments outside an allowlist of intent prefixes."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "stoa-doclint"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
rustc_lexer = "0.1"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"

[lints]
workspace = true
