[package]
name = "stoa-hooks"
description = "Stoa lightweight per-platform hook binary."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "stoa-hook"
path = "src/main.rs"

[lints]
workspace = true
