[package]
name = "stoa-hooks"
description = "Stoa lightweight per-platform hook binary."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "stoa-hook"
path = "src/main.rs"

[dependencies]
stoa-queue = { path = "../stoa-queue", version = "0.1.0" }
anyhow = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
snapbox = { workspace = true }
assert_fs = { workspace = true }

[lints]
workspace = true
