[package]
name = "stoa-hooks"
description = "Stoa Claude Code SessionEnd / Stop hook — fires a `mine` RPC to stoa-recalld."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "stoa-hook"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
