[package]
name = "stoa-inject-hooks"
description = "Stoa SessionStart injection hook (recall-driven additionalContext)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "stoa_inject_hooks"
path = "src/lib.rs"

[[bin]]
name = "stoa-inject-hook"
path = "src/main.rs"

[dependencies]
stoa-core = { path = "../stoa-core", version = "0.1.0" }
stoa-recall = { path = "../stoa-recall", version = "0.1.0" }
stoa-recall-local-chroma-sqlite = { path = "../stoa-recall/backends/local-chroma-sqlite", version = "0.1.0" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
snapbox = { workspace = true }
serde_json = { workspace = true }
stoa-cli = { path = "../stoa-cli", version = "0.1.0" }

[lints]
workspace = true
