[package]
name = "stoa-inject-hooks"
description = "Stoa SessionStart + UserPromptSubmit injection hook — pulls wiki hits from stoa-recalld, wraps in MINJA-resistant envelope."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "stoa_inject_hooks"
path = "src/lib.rs"

[[bin]]
name = "stoa-inject-hook"
path = "src/main.rs"

[dependencies]
stoa-recall = { path = "../stoa-recall", version = "0.1.0" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
