[package]
name = "stoa-recall-local-chroma-sqlite"
description = "Stoa default recall backend: ChromaDB + SQLite FTS5 + KG."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
stoa-recall = { path = "../..", version = "0.1.0" }
stoa-queue = { path = "../../../stoa-queue", version = "0.1.0" }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
